# TracerC

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Syscall.h  Tracer.h
scripts/: dummy.py  generate_syscall_map.py
src/: SyscallMap.cpp  Tracer.cpp  main.cpp  simple  simple.c
